# ZipOn

./: .gitlab-ci.yml  Jenkinsfile  README.md
.gitlab/merge_request_templates/: back.md
ai/: .gitignore  Dockerfile  main.py  pyproject.toml
ai/app/: .env
ai/app/agent/: contract_analysis_agent.py  verify_agent.py
ai/app/modules/: llm_extractor.py  pdf_parser.py  verifier.py
ai/app/nodes/: compare_node.py  extract_contract_node.py  extract_llm_node.py  extract_pdf_node.py  extract_unfair_clause_node.py  law_tool_node.py  reasoning_node.py
ai/app/schemas/: contract_state.py  verify_state.py
ai/app/tool/: define_tools.py
ai/notebooks/: preprocess_laws.ipynb
ai/notebooks/chroma_db/: chroma.sqlite3
backend/: .gitignore  Dockerfile  build.gradle  build.gradle.kts
exec/: external-services.md
frontend/: .gitlab-ci.yml  Dockerfile  NEW_FEATURE_GUIDE.md  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  postcss.config.mjs  tailwind.config.ts  tsconfig.json
frontend/docs/: AUTH_SETUP_SUMMARY.md  DATA_INTEGRATION_GUIDE.md
frontend/docs/guides/: API_INTEGRATION_GUIDE.md  ARCHITECTURE_GUIDE.md  AUTH_GUARD_GUIDE.md  FILTERS.md  LIVE_COMMERCE_UI_GUIDE.md  QUICK_START_AUTH.md  README.md  SUSPENSE_AND_SKELETON_GUIDE.md
frontend/public/: manifest.webmanifest  service-worker.js
frontend/src/: App.tsx  firebase.js  middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/constants/: README.md  api.ts  filters.ts  index.ts  navigation.ts  queryKeys.ts  routes.ts
frontend/src/data/: AuctionHistory.ts  (+11 more)
(+754 files in other folders)
